--- a/package.json
+++ b/package.json
@@ -10,8 +10,30 @@
     "test": "jest"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.3.4",
+    "@react-native-firebase/app": "^19.0.0",
+    "@react-native-firebase/auth": "^19.0.0",
+    "@react-native-firebase/firestore": "^19.0.0",
+    "@react-native-material/core": "^1.3.7",
+    "@react-navigation/bottom-tabs": "^6.5.14",
+    "@react-navigation/native": "^6.1.12",
+    "@react-navigation/native-stack": "^6.9.20",
+    "@react-navigation/stack": "^6.3.23",
+    "@reduxjs/toolkit": "^2.2.1",
+    "axios": "^1.6.7",
     "react": "18.2.0",
-    "react-native": "0.73.4"
+    "react-hook-form": "^7.50.1",
+    "react-native": "0.73.4",
+    "react-native-fast-image": "^8.6.3",
+    "react-native-gesture-handler": "^2.15.0",
+    "react-native-safe-area-context": "^4.9.0",
+    "react-native-screens": "^3.29.0",
+    "react-native-svg": "^14.1.0",
+    "react-native-ui-lib": "^7.16.0",
+    "react-redux": "^9.1.0",
+    "redux-logger": "^3.0.6",
+    "remove": "^0.1.5",
+    "yup": "^1.3.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
@@ -21,12 +43,16 @@
     "@react-native/eslint-config": "0.73.2",
     "@react-native/metro-config": "0.73.5",
     "@react-native/typescript-config": "0.73.1",
+    "@tsconfig/react-native": "^3.0.3",
     "@types/react": "^18.2.6",
     "@types/react-test-renderer": "^18.0.0",
     "babel-jest": "^29.6.3",
+    "babel-plugin-module-resolver": "^5.0.0",
     "eslint": "^8.19.0",
     "jest": "^29.6.3",
+    "metro-react-native-babel-preset": "^0.77.0",
     "prettier": "2.8.8",
+    "react-native-reanimated": "^3.7.1",
     "react-test-renderer": "18.2.0",
     "typescript": "5.0.4"
   },
